# SuperTurboMode-code

./: Cargo.toml  README.md
.github/workflows/: main.yml  rust.yml  rust_build.yml
src/: lib.rs
src/banjo/: mod.rs
src/bowserjr/: mod.rs
src/byleth/: mod.rs
src/captain/: mod.rs
src/charizard/: mod.rs
src/cloud/: mod.rs
src/config/: mod.rs
src/corrin/: mod.rs
src/custom/: mod.rs
src/daisy/: mod.rs
src/darkpit/: mod.rs
src/dedede/: mod.rs
src/diddy/: mod.rs
src/diddykong/: mod.rs
src/donkey/: mod.rs
src/drmario/: mod.rs
src/falco/: mod.rs
src/fox/: mod.rs
src/ganon/: mod.rs
src/greninja/: mod.rs
src/hero/: mod.rs
src/ike/: mod.rs
src/incineroar/: mod.rs
src/ivysaur/: mod.rs
src/joker/: mod.rs
src/ken/: mod.rs
src/kirby/: mod.rs
src/koopa/: mod.rs
src/krool/: mod.rs
src/link/: mod.rs
src/lucario/: mod.rs
src/lucas/: mod.rs
src/luigi/: mod.rs
src/mac/: mod.rs
src/mario/: mod.rs
src/marth/: mod.rs
src/metaknight/: mod.rs
src/mewtwo/: mod.rs
src/ness/: mod.rs
src/palutena/: mod.rs
src/peach/: mod.rs
src/pit/: mod.rs
src/ridley/: mod.rs
src/rob/: mod.rs
src/roy/: mod.rs
src/samus/: mod.rs
src/samusanddarksamus/: mod.rs
src/samusd/: mod.rs
src/shulk/: mod.rs
src/simonandrichter/: mod.rs
src/snake/: mod.rs
src/squirtle/: mod.rs
src/terry/: mod.rs
src/wario/: mod.rs
src/wolf/: mod.rs
src/younglink/: mod.rs
src/zelda/: mod.rs
