[package]
name = "super_turbo_mode"
version = "0.1.0"
authors = ["super_turbo_mode"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
acmd = { git = "https://github.com/ultimate-research/skyline-acmd.git" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true