[package]
name = "super_turbo_mode"
version = "0.1.0"
authors = ["yeetz"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]



[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git"}
acmd = { git = "https://github.com/ultimate-research/skyline-acmd.git" }
toml = "0.5.6"
lazy_static = "1.4"
semver = "0.11.0"
skyline-web = { git = "https://github.com/skyline-rs/skyline-web" }
serde = { version = "1", features = ["derive"] }


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true